--- a/fe-route-app/src/app/app.component.html
+++ b/fe-route-app/src/app/app.component.html
@@ -1,19 +1,24 @@
 
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+ 
+ <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" routerLink="">Home</a>
+      <a class="nav-item nav-link active" routerLink="">Login</a>
+      <!-- <a class="nav-item nav-link active" routerLink="Home">Home</a> -->
       <a class="nav-item nav-link" routerLink="About">About</a>
-      <a class="nav-item nav-link" routerLink="Product">Product</a>
+      <!-- <a class="nav-item nav-link" routerLink="Product">Product</a> -->
       <a class="nav-item nav-link " routerLink="Contact">Contact</a>
+      <a class="nav-item nav-link " routerLink="form">Form</a>
     </div>
     
   </div>
   <a class="profile"  routerLink="Profile">Profile</a>
-</nav>
+</nav> 
+
+<li><a (click)="logout()" *ngIf="isAuthenticated()">Logout</a></li>
+<!-- <li><a (click)="form()" *ngIf="isAuthenticated()">contact</a></li> -->
 <router-outlet></router-outlet>
